# audio-sample-ta

./: .gitignore  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  setup.bat
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test-database.ipynb  transcription.db
backend/app/: main.py
backend/app/api/endpoints/: transcription.py
backend/app/api/routes/: transcription.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: transcription.py
backend/app/schemas/: transcription.py
backend/audio_processor/: transcriber.py
backend/sqlite/: database.py
backend/test/: test_audio_processor.py  test_db_connection.py  test_db_operations.py  test_transcription_api.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  config.ts  index.css
frontend/src/api/: axios.ts
frontend/src/components/: AllTranscriptionButton.test.tsx  AllTranscriptionButton.tsx  FileUpload.test.tsx  FileUpload.tsx  SearchBar.test.tsx  SearchBar.tsx  TranscriptionList.test.tsx  TranscriptionList.tsx
frontend/src/types/: index.ts
